--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ class="nobullet"<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -86,31 +86,31 @@
       <div class="row flex-grow-1 nopadding">
         <div class="col-lg-4 col-12">
           <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
-          <ul>
-            <li>2 nests dried egg noodles</li><hr>
-            <li>1 tbsp sesame oil</li><hr>
-            <li>3 skinless boneless chicken thighs, cut into strips</li><hr>
-            <li>3 tbsp soy sauce</li><hr>
-            <li>2 tbsp honey</li><hr>
-            <li>1 tbsp vegetable oil</li><hr>
-            <li>1 garlic clove, peeled and finely sliced</li><hr>
-            <li>3cm piece ginger, peeled and cut into matchsticks</li><hr>
-            <li>100g Tenderstem broccoli, halved and cut lengthways</li><hr>
-            <li>100g baby corn, thickly sliced diagonally</li><hr>
-            <li>75g chestnut mushrooms, sliced</li><hr>
-            <li>1 yellow pepper, deseeded and cut into strips</li><hr>
-            <li>50g raw cashew nuts, toasted</li><hr>
-            <li>150g pot fresh edamame beans</li><hr>
+          <ul> class="listmargin"
+            <li class="nobullet">2 nests dried egg noodles</li><hr>
+            <li class="nobullet">1 tbsp sesame oil</li><hr>
+            <li class="nobullet">3 skinless boneless chicken thighs, cut into strips</li><hr>
+            <li class="nobullet">3 tbsp soy sauce</li><hr>
+            <li class="nobullet">2 tbsp honey</li><hr>
+            <li class="nobullet">1 tbsp vegetable oil</li><hr>
+            <li class="nobullet">1 garlic clove, peeled and finely sliced</li><hr>
+            <li class="nobullet">3cm piece ginger, peeled and cut into matchsticks</li><hr>
+            <li class="nobullet">100g Tenderstem broccoli, halved and cut lengthways</li><hr>
+            <li class="nobullet">100g baby corn, thickly sliced diagonally</li><hr>
+            <li class="nobullet">75g chestnut mushrooms, sliced</li><hr>
+            <li class="nobullet">1 yellow pepper, deseeded and cut into strips</li><hr>
+            <li class="nobullet">50g raw cashew nuts, toasted</li><hr>
+            <li class="nobullet">150g pot fresh edamame beans</li><hr>
           </ul>
 
         </div>
         <div class="col-lg-8 col-12 nopadding">
           <h2 class="recipe-title-h2">Method</h2>
             <ol>
-              <li>Boil the noodles, following pack instructions, then drain and set aside.</li><hr>
-              <li>Meanwhile, heat the sesame oil in a wok or large frying pan over a high heat until very hot. Add the chicken and stir-fry for 6-7 mins until golden and crispy. Add the soy sauce and honey and heat for 30 secs until bubbling and the chicken is coated. Tip the contents of the pan into a bowl and set aside. Wipe out the pan with kitchen paper.</li><hr>
-              <li>Add the vegetable oil to the pan, then add the garlic and ginger and cook for 30 secs. Add the broccoli, baby corn, mushrooms and pepper, then stir-fry for 3-4 mins, continually tossing the mixture to help it cook evenly. Add the cashews and edamame beans and toss for 1 min.</li><hr>
-              <li>Return the chicken to the pan, stir to combine and serve over the noodles.</li><hr>
+              <li class="listmargin">Boil the noodles, following pack instructions, then drain and set aside.</li><hr>
+              <li class="listmargin">Meanwhile, heat the sesame oil in a wok or large frying pan over a high heat until very hot. Add the chicken and stir-fry for 6-7 mins until golden and crispy. Add the soy sauce and honey and heat for 30 secs until bubbling and the chicken is coated. Tip the contents of the pan into a bowl and set aside. Wipe out the pan with kitchen paper.</li><hr>
+              <li class="listmargin">Add the vegetable oil to the pan, then add the garlic and ginger and cook for 30 secs. Add the broccoli, baby corn, mushrooms and pepper, then stir-fry for 3-4 mins, continually tossing the mixture to help it cook evenly. Add the cashews and edamame beans and toss for 1 min.</li><hr>
+              <li class="listmargin">Return the chicken to the pan, stir to combine and serve over the noodles.</li><hr>
             </ol>
         </div>
       </div>
