--- a/ginger-tofu.html
+++ b/ginger-tofu.html
@@ -77,11 +77,11 @@
     </div>
 
     <div class="row sm-nut-container">
-              <div class="col nut-container nopadding"><div class="box-nut"><p>Energy <br>478kcal <br>24%</p></div></div>
-              <div class="col nut-container nopadding"><div class="box-nut"><p>Fat <br>25g <br>35%</p></div></div>
-              <div class="col nut-container nopadding"><div class="box-nut"><p>Saturates <br>5g <br>25%</p></div></div>
-              <div class="col nut-container nopadding"><div class="box-nut"><p>Sugars <br>11g <br>12%</p></div></div>
-              <div class="col nut-container nopadding"><div class="box-nut"><p>Salt <br>2.2g <br>37%</p></div></div>
+              <div class="col nut-container nopadding"><div class="box-nut"><p>Energy <br>613kcal <br>31%</p></div></div>
+              <div class="col nut-container nopadding"><div class="box-nut"><p>Fat <br>27g <br>39%</p></div></div>
+              <div class="col nut-container nopadding"><div class="box-nut"><p>Saturates <br>5g <br>23%</p></div></div>
+              <div class="col nut-container nopadding"><div class="box-nut"><p>Sugars <br>18g <br>20%</p></div></div>
+              <div class="col nut-container nopadding"><div class="box-nut"><p>Salt <br>1.8g <br>29%</p></div></div>
     </div>
 
     
@@ -89,30 +89,29 @@
       <div class="col-lg-4 col-12">
         <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
         <ul> 
-          <li class="nobullet">2 nests dried egg noodles</li><hr>
-          <li class="nobullet">1 tbsp sesame oil</li><hr>
-          <li class="nobullet">3 skinless boneless chicken thighs, cut into strips</li><hr>
-          <li class="nobullet">3 tbsp soy sauce</li><hr>
-          <li class="nobullet">2 tbsp honey</li><hr>
-          <li class="nobullet">1 tbsp vegetable oil</li><hr>
-          <li class="nobullet">1 garlic clove, peeled and finely sliced</li><hr>
-          <li class="nobullet">3cm piece ginger, peeled and cut into matchsticks</li><hr>
-          <li class="nobullet">100g Tenderstem broccoli, halved and cut lengthways</li><hr>
-          <li class="nobullet">100g baby corn, thickly sliced diagonally</li><hr>
-          <li class="nobullet">75g chestnut mushrooms, sliced</li><hr>
-          <li class="nobullet">1 yellow pepper, deseeded and cut into strips</li><hr>
-          <li class="nobullet">50g raw cashew nuts, toasted</li><hr>
-          <li class="nobullet">150g pot fresh edamame beans</li><hr>
+          <li class="nobullet">200g Plant Chef organic firm tofu</li><hr>
+          <li class="nobullet">3 tbsp hoisin dipping sauce</li><hr>
+          <li class="nobullet">2 tbsp reduced-salt soy sauce</li><hr>
+          <li class="nobullet">1 tbsp maple syrup</li><hr>
+          <li class="nobullet">3cm piece fresh ginger, peeled and grated</li><hr>
+          <li class="nobullet">375g head of broccoli, cut into florets</li><hr>
+          <li class="nobullet">2 tbsp sesame oil</li><hr>
+          <li class="nobullet">1 tbsp sesame seeds</li><hr>
+          <li class="nobullet">1 tbsp cornflour</li><hr>
+          <li class="nobullet">250g pouch microwave basmati rice</li><hr>
+          <li class="nobullet">2 spring onions, trimmed and shredded</li><hr>
+          <li class="nobullet">1 red chilli, sliced</li><hr>
         </ul>
 
       </div>
       <div class="col-lg-8 col-12 nopadding">
         <h2 class="recipe-title-h2">Method</h2>
           <ol>
-            <li class="listmargin">Boil the noodles, following pack instructions, then drain and set aside.</li><hr>
-            <li class="listmargin">Meanwhile, heat the sesame oil in a wok or large frying pan over a high heat until very hot. Add the chicken and stir-fry for 6-7 mins until golden and crispy. Add the soy sauce and honey and heat for 30 secs until bubbling and the chicken is coated. Tip the contents of the pan into a bowl and set aside. Wipe out the pan with kitchen paper.</li><hr>
-            <li class="listmargin">Add the vegetable oil to the pan, then add the garlic and ginger and cook for 30 secs. Add the broccoli, baby corn, mushrooms and pepper, then stir-fry for 3-4 mins, continually tossing the mixture to help it cook evenly. Add the cashews and edamame beans and toss for 1 min.</li><hr>
-            <li class="listmargin">Return the chicken to the pan, stir to combine and serve over the noodles.</li><hr>
+            <li class="listmargin">Pat the tofu dry with kitchen paper. Lay flat on a lined baking tray, then place another baking tray on top and place a heavy frying pan on top; set aside.</li><hr>
+            <li class="listmargin">Whisk together the hoisin, soy sauce, maple syrup and grated ginger in a small bowl; set aside.</li><hr>
+            <li class="listmargin">Tip the broccoli into a heatproof bowl and pour over just boiled water from the kettle to cover. Leave for 2 mins, then drain. Heat half the sesame oil in a wok or large frying pan over a high heat and add the broccoli florets. Fry for 4-5 mins until tender and charred. Transfer to a bowl and set aside. Wipe out the pan, return to the heat and add the sesame seeds to toast for 30 secs, then transfer to a small plate.</li><hr>
+            <li class="listmargin">Meanwhile, pat the tofu dry again and and cut into 2cm cubes. Toss with the cornflour and a little seasoning to coat. Heat the remaining oil in the empty pan over a high heat, then fry the tofu for 5-6 mins, turning occasionally, until crisp. Turn down the heat slightly, then stir in the hoisin sauce mixture, toss to coat and heat through for 1 min. Stir in most of the sesame seeds.</li><hr>
+            <li class="listmargin">Heat the rice according to the pack instructions. Spoon into bowls, then top with the sticky tofu and charred broccoli. To serve, scatter with the spring onions, chilli and remaining sesame seeds.</li><hr>
           </ol>
       </div>
     </div>
